<resources>
    <string name="app_name">KelBilim</string>
    <string name="title_home">Главная</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_card">Учебная карточка</string>
    <string name="title_notifications">Уведомление</string>
    <string name="title_profile">Профиль</string>
    <string name="enter">Вход</string>
    <string name="enterLogin">Введите логин и пароль</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_content">В связи с переводом учебного процесса в дистанционную форму для профессорско-преподавательского состава КГТУ им.И.Раззакова организованы курсы по применению современных образовательных и цифровых технологий в проведении дистанционного обучения. В программе курса предусматривается изучение синхронных и асинхронных методов обучения. Слушатели курса учатся создавать видеоуроки при помощи презентаций и самостоятельно создавать, и администрировать курсы на платформе управления обучением Moodle. В качестве учебного контента используются обучающие материалы, видеопрезентации и руководства для преподавателей по современным методам в образовании, разработанные консорциумом университетов в рамках программы Эразмусплюс и проекта HiEdTec «Модернизация высшего образования в Центральной Азии через современные технологии». Занятия проводятся на образовательном портале КГТУ в форме вебинаров и асинхронного самостоятельного обучения. По окончании курсов преподавателям поручено разработать и презентовать собственные курсы на основе полученных новых навыков. Для успешно прошедших обучение будут выданы сертификаты, подтверждающие повышение квалификации.</string>
    <string name="test_title">Для преподавателей проходят онлайн-курсы повышения квалификации</string>
    <string name="online">Онлайн</string>
</resources>
